# LeKiwi-runtime

./: .gitignore  README.md  main.py  main_voice_only.py  pyproject.toml
lekiwi/: host.py
lekiwi/personality/: persona.ini  system.txt
lekiwi/robot/: __init__.py  lekiwi.py
lekiwi/services/cameras/: __init__.py  camera_service.py
lekiwi/services/motors/: arms_service.py  wheels_service.py
lekiwi/services/pose_detection/: __init__.py  pose_service.py
scripts/: README.md  record_arm.py  replay.py  turn_off.py
scripts/autopilot/: README.md  observe.py
scripts/operate/: README.md  record_arm.py  record_wheels.py  replay.py  teleoperate.py
scripts/tests/: README.md  test_audio.py  test_cameras.py  test_motors.py
setup/: setup_audio.sh
