[project]
name = "lekiwi-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot[feetech]>=0.4.2",
    "livekit-agents>=1.1.7",
    "livekit>=1.0.20",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.2.1",
    "pyzmq>=27.1.0",
]

[tool.uv]
package = true

[project.scripts]
lekiwi-host = "lekiwi.host:main"

[tool.setuptools]
packages = ["lekiwi"]